# four_dof_manipulator

./: CMakeLists.txt  README.md  package.xml
config/: joint_names_four_dof_manipulator.yaml
launch/: all.launch  display.launch  gazebo.launch
meshes/: base_link.STL  finger_1.STL  finger_2.STL  first_link.STL  second_link.STL  third_link.STL
scripts/: robot_motion.py
src/: manipulator_motion.py
urdf/: four_dof_manipulator.csv  four_dof_manipulator.urdf
worlds/: environment.world  simulation_environment.world
yaml/: gains.yaml  jtc_controller.yaml
